# Streak

./: Dockerfile  local.sh
client/: package-lock.json  package.json
client/src/: api.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/goals/: page.tsx
client/src/app/home/: page.tsx
client/src/app/weeks/: page.tsx
client/src/app/weeks/[week_id]/: page.tsx
client/src/components/generic/: ProgressCircle.tsx
client/src/components/goals/: GoalCard.tsx  GoalForm.tsx  GoalList.tsx  WeekGoalCard.tsx
client/src/components/navbar/: Navbar.tsx
client/src/components/weeks/: WeekCard.tsx  WeekList.tsx
client/src/types/: goal.ts  week.ts  week_admin_responses.ts  weekly_goal.ts
examples/: supabase_example.py
server/: .env.default  config.py  main.py  pyproject.toml
server/database/: supabase_client.py
server/dependencies/: supabase_dep.py
server/models/: goal_models.py  week_models.py  weekly_goal_models.py
server/responses/: week_admin_responses.py
server/routers/: check.py  checklist.py  goal.py  goal_crud.py  week.py  week_admin.py  week_crud.py  weekly_goal.py  weekly_goal_crud.py
server/services/: check_handler.py  checklist_handler.py  goal_handler.py  week_admin_handler.py  week_crud_handler.py  week_handler.py  weekly_goal_crud_handler.py  weekly_goal_handler.py
