[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["TongguangZhang <tonggz250@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.11"
supabase = "^2.13.0"
supabase-auth = "^2.11.4"
dotenv = "^0.9.9"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
